# knowledge-project-ruoyi

./: .gitignore  AGENTS.md  README.md  pom.xml
doc/: mapper.md
python-kb/: .env.example  README.md  pyproject.toml
python-kb/app/: __init__.py  main.py
python-kb/app/api/: router.py
python-kb/app/api/routes/: chat.py  documents.py  health.py
python-kb/app/core/: config.py
python-kb/app/graph/: kb_graph.py
python-kb/app/schemas/: chat.py  document.py
python-kb/app/services/: document_ingest.py
python-kb/python_kb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python-kb/tests/: test_chat.py
react-ui/: package.json
react-ui/config/: config.ts  routes.ts
react-ui/scripts/: generate-page-loaders.js
react-ui/src/: app.tsx  tailwind.css
react-ui/src/components/IconSelector/: CopyableIcon.tsx  IconPicSearcher.tsx  index.tsx
react-ui/src/components/RightContent/: AvatarDropdown.tsx
react-ui/src/pages/Kb/Document/: index.tsx
react-ui/src/pages/Monitor/Cache/: List.tsx  index.tsx
react-ui/src/pages/Monitor/Job/: index.tsx
react-ui/src/pages/Monitor/JobLog/: index.tsx
react-ui/src/pages/Monitor/Logininfor/: index.tsx
react-ui/src/pages/Monitor/Online/: index.tsx
react-ui/src/pages/Monitor/Operlog/: index.tsx
react-ui/src/pages/System/Config/: index.tsx
react-ui/src/pages/System/Dept/: index.tsx
react-ui/src/pages/System/Dict/: index.tsx
react-ui/src/pages/System/DictData/: index.tsx
react-ui/src/pages/System/Logininfor/: index.tsx
react-ui/src/pages/System/Menu/: edit.tsx  index.tsx
react-ui/src/pages/System/Notice/: index.tsx
react-ui/src/pages/System/Operlog/: index.tsx
react-ui/src/pages/System/Post/: index.tsx
react-ui/src/pages/System/Role/: edit.tsx  (+1 more)
react-ui/src/services/: pageLoaders.generated.ts  session.ts
react-ui/src/services/kb/: document.ts
react-ui/src/types/kb/: document.d.ts
react-ui/src/utils/: IconUtil.ts  tree.ts
ruoyi-admin/src/main/resources/: application-druid.yml  application.yml
ruoyi-framework/: pom.xml
sql/: ry_react.sql
(+13 files in other folders)
