[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-kb"
version = "0.1.0"
description = "FastAPI and LangGraph knowledge-base service for ruoyi-react."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "langgraph>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "python-dotenv>=1.0,<2.0",
    "python-docx>=1.1,<2.0",
    "pypdf>=4.2,<7.0",
    "chromadb>=1.0,<2.0",
    "openai>=1.35,<3.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.5,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
